Add note; include markdown-unlit in cabal file

--- a/lambda-diff.cabal
+++ b/lambda-diff.cabal
@@ -58,7 +58,7 @@ executable lambda-diff
   -- other-extensions:
 
   -- Other library packages from which modules are imported.
-  build-depends:       base ^>=4.13.0.0
+  build-depends:       base ^>=4.13.0.0, markdown-unlit
 
   -- Directories containing source files.
   hs-source-dirs:      app
